--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Login/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Login/Index.cshtml
@@ -13,9 +13,10 @@
     <title>Login Form</title>
 </head>
 <body>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Index", "Login", FormMethod.Post))
     {
         <div class="login-form">
+
             <h1>Đăng nhập</h1>
 
             @Html.AntiForgeryToken()
@@ -46,31 +47,20 @@
                 <div class="clear"> </div>
             </div>
 
-
-
-
-                <!-- <span class="" style="margin-top:20px ;">
-                    <label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>Lưu mật khẩu</label>
-                </span>
-
-            <div class="txt">
-                <input type="text" name="" id="" placeholder="Tài khoản">
-            </div>
-            <div class="txt">
-                <input type="password" name="" id="" placeholder="Mật khẩu">
-            </div>
-
-            <div class="btn">
-                <button>Đăng nhập</button>
-            </div>
-            <div class="bottom-text">
-                <p><a href="#"> Quên mật khẩu?</a></p>
-            </div>
-
-                    -->
-
+            @*@{
+                    var session = (HiemMauNhanDao.Common.UserLogin)Session[HiemMauNhanDao.Common.CommonConstant.USER_SESSION];
+                }
+                @if (session.AuthorID == "Q01" || session.AuthorID == "Q02")
+                {
+                    <h1 style="text-align:center"> có quyền truy cập </h1>
+                }
+                else
+                {
+                    <h1 style="text-align:center">Không có quyền truy cập 2</h1>
+                }*@
 
         </div>
-     }
-    </body>
+    }
+</body>
 </html>
+
