--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -18,18 +18,18 @@
             <li>
                 <a href="/Admin/SanPham/Index">
                     <i class="metismenu-icon pe-7s-note2"></i>
-                    Bài đăng
+                    Đợt hiến máu
                     <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                 </a>
                 <ul>
                     <li>
-                        <a href="/Admin/SanPham/Index">
+                        <a href="/Admin/DotHiemMau/Index">
                             <i class="metismenu-icon"></i>
-                            Đợt hiến máu
+                            Đăng bài
                         </a>
                     </li>
                     <li>
-                        <a href="/Admin/LoaiSach/Index">
+                        <a href="/Admin/DKDHM/Index">
                             <i class="metismenu-icon">
                             </i>Đơn vị tham gia
                         </a>
@@ -37,7 +37,7 @@
                 </ul>
             </li>
             <li>
-                <a href="/Admin/DonHang/Index">
+                <a href="/Admin/BenhVien/Index">
                     <i class="metismenu-icon pe-7s-display2"></i>
                     Bệnh viện
                 </a>
