--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Home/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Home/Index.cshtml
@@ -11,17 +11,17 @@
             <div class="col-lg-5 col-xl-5">
                 <div class="banner_text">
                     <div class="banner_text_iner">
-                        <h5>We are here for your care</h5>
-                        <h1>
-                            Best Care &
-                            Better Doctor
-                        </h1>
+                        <h5>HIẾN MÁU NHÂN ĐẠO </h5>
+                        <h2>
+                            NGHĨA CỬ CAO ĐẸP CỦA NGƯỜI VIỆT NAM
+                        </h2>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit sed do eiusmod tempor incididunt ut labore et dolore
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.Risus cmodo viverra
+                            Nếu bạn cắt đi một cành cây, chỉ ít lâu sau thôi tại chỗ đó sẽ mọc lên 2 ngọn cây mới.
+                            Đừng lo lắng vì lượng máu mình đã mất đi sau khi hiến. Mỗi lần cho máu là mỗi lần cơ thể bạn được kích thích quá trình tái tạo máu mới.
+                            Vì vậy hãy cố gắng kết hợp ăn uống và sinh hoạt điều độ, sức khoẻ bạn sẽ tăng lên rất nhiều đấy.
+                            Tham gia hiến máu cũng là một cách để bạn kiểm tra sức khoẻ.
                         </p>
-                        <a href="#" class="btn_2">Make an appointment</a>
+                        <a href="#" class="btn_2">Tham gia ngay</a>
 
                     </div>
                 </div>
@@ -71,14 +71,13 @@
          </div>
      </div>
  </section> -->
-<!-- about us part end-->
-<!-- feature_part start-->
+<!-- Lợi ích-->
 <section class="feature_part">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-xl-8">
                 <div class="section_tittle text-center">
-                    <h2>Our services</h2>
+                    <h2>Lợi ích </h2>
                 </div>
             </div>
         </div>
@@ -86,21 +85,22 @@
             <div class="col-lg-3 col-sm-12">
                 <div class="single_feature">
                     <div class="single_feature_part">
-                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/feature_1.svg" alt=""></span>
-                        <h4>Better Future</h4>
+                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/giotmau2.svg" alt=""></span>
+                        <h4>Tái tạo các tế bào máu mới</h4>
                         <p>
-                            Darkness multiply rule Which from without life creature blessed
-                            give moveth moveth seas make day which divided our have.
+                            Sau khi hiến máu, cơ thể sẽ hoạt động để bổ sung lại lượng máu đã mất.
+                            Điều này sẽ kích thích quá trình sản sinh các tế bào máu mới và nhờ đó,
+                            các tế bào mới sẽ luân phiên giúp duy trì cơ thể luôn khỏe mạnh.
                         </p>
                     </div>
                 </div>
                 <div class="single_feature">
                     <div class="single_feature_part">
-                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/feature_2.svg" alt=""></span>
-                        <h4>Better Future</h4>
+                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/suckhoe.svg" alt=""></span>
+                        <h4>Giảm nguy cơ ung thư</h4>
                         <p>
-                            Darkness multiply rule Which from without life creature blessed
-                            give moveth moveth seas make day which divided our have.
+                            Hiến máu cũng có thể giúp giảm nguy cơ mắc các bệnh ung thư.
+                            Bằng cách hiến máu, hàm lượng sắt tích tụ trong cơ thể sẽ được duy trì ở mức lành mạnh có lợi cho sức khỏe.
                         </p>
                     </div>
                 </div>
@@ -113,21 +113,22 @@
             <div class="col-lg-3 col-sm-12">
                 <div class="single_feature">
                     <div class="single_feature_part">
-                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/feature_1.svg" alt=""></span>
-                        <h4>Better Future</h4>
+                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/suckhoe2.svg" alt=""></span>
+                        <h4>Đốt cháy calo</h4>
                         <p>
-                            Darkness multiply rule Which from without life creature blessed
-                            give moveth moveth seas make day which divided our have.
+                            Mỗi lần hiến máu cơ thể bạn sẽ tiêu tốn khoảng 650 – 700 Kcal.
+                            Cân nặng của bạn có liên quan tới việc hấp thu calo và vì vậy, hiến máu có thể hỗ trợ bạn kiểm soát cân nặng.
                         </p>
                     </div>
                 </div>
                 <div class="single_feature">
                     <div class="single_feature_part">
-                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/feature_2.svg" alt=""></span>
-                        <h4>Better Future</h4>
+                        <span class="single_feature_icon"><img src="~/Assets/client/img/icon/traitim1.svg" alt=""></span>
+                        <h4>Giảm nguy cơ mắc bệnh tim mạch</h4>
                         <p>
-                            Darkness multiply rule Which from without life creature blessed
-                            give moveth moveth seas make day which divided our have.
+                            Hiến máu có tác dụng tích cực trong việc làm
+                            giảm nguy cơ mắc các bệnh tim mạch và gan do tình trạng cơ thể thừa sắt quá mức gây ra.
+                            Một chế độ ăn uống giàu sắt có thể làm tăng nồng độ sắt trong máu.
                         </p>
                     </div>
                 </div>
@@ -135,8 +136,9 @@
         </div>
     </div>
 </section>
-<!-- feature_part start-->
-<!-- our depertment part start-->
+
+
+<!-- Điều kiện tham gia-->
 <section class="our_depertment section_padding">
     <div class="container">
         <div class="row justify-content-center text-center">
@@ -144,7 +146,7 @@
                 <div class="depertment_content">
                     <div class="row justify-content-center">
                         <div class="col-xl-8">
-                            <h2>Our Depertment</h2>
+                            <h2>Điều kiện tham gia</h2>
                             <div class="row">
                                 <div class="col-lg-6 col-sm-6">
                                     <div class="single_our_depertment">
@@ -152,10 +154,10 @@
                                             <img src="~/Assets/client/img/icon/feature_2.svg"
                                                  alt="">
                                         </span>
-                                        <h4>Better Future</h4>
+                                        <h4>Tất cả mọi người</h4>
                                         <p>
-                                            Darkness multiply rule Which from without life creature blessed
-                                            give moveth moveth seas make day which divided our have.
+                                            Độ tuổi quy định 18 - 60 tuổi.
+                                            Hãy tham gia ngay khi bạn là một công dân trẻ tuổi.
                                         </p>
                                     </div>
                                 </div>
@@ -165,10 +167,10 @@
                                             <img src="~/Assets/client/img/icon/feature_2.svg"
                                                  alt="">
                                         </span>
-                                        <h4>Better Future</h4>
+                                        <h4>Thể trạng</h4>
                                         <p>
-                                            Darkness multiply rule Which from without life creature blessed
-                                            give moveth moveth seas make day which divided our have.
+                                            Cân nặng ít nhất là 42kg đối với phụ nữ, 45kg đối với nam giới. 
+                                            Lượng máu hiến mỗi lần không quá 9ml/kg cân nặng và không quá 500ml mỗi lần.
                                         </p>
                                     </div>
                                 </div>
@@ -214,8 +216,8 @@
         <div class="row justify-content-center">
             <div class="col-xl-8">
                 <div class="section_tittle text-center">
-                    <h2> Experienced Doctors</h2>
-                    <p>Face replenish sea good winged bearing years air divide wasHave night male also</p>
+                    <h2> Thành viên tiêu biểu</h2>
+                    @*<p>Họ đã đứng ra kêu gọi mọi người tham gia hết mình</p>*@
                 </div>
             </div>
         </div>
@@ -223,7 +225,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/doctor_1.png" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/lap.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
                                 <li><a href="#"> <i class="ti-facebook"></i> </a></li>
@@ -235,8 +237,8 @@
                     </div>
                     <div class="single_text">
                         <div class="single_blog_text">
-                            <h3>DR Adam Billiard</h3>
-                            <p>Heart specialist</p>
+                            <h3>Kn Võ Lập</h3>
+                            <p>Tham gia 10 lần</p>
                         </div>
                     </div>
                 </div>
@@ -244,7 +246,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/doctor_4.png" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/huy.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
                                 <li><a href="#"> <i class="ti-facebook"></i> </a></li>
@@ -256,8 +258,8 @@
                     </div>
                     <div class="single_text">
                         <div class="single_blog_text">
-                            <h3>DR Adam Billiard</h3>
-                            <p>Medicine specialist</p>
+                            <h3>Ngọc Huy</h3>
+                            <p>Tham gia 10 lần</p>
                         </div>
                     </div>
                 </div>
@@ -265,7 +267,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/doctor_2.png" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/nhan.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
                                 <li><a href="#"> <i class="ti-facebook"></i> </a></li>
@@ -277,8 +279,8 @@
                     </div>
                     <div class="single_text">
                         <div class="single_blog_text">
-                            <h3>DR Fred Macyard</h3>
-                            <p>CHeart specialist</p>
+                            <h3>Trọng Nhân</h3>
+                            <p>Tham gia 10 lần</p>
                         </div>
                     </div>
                 </div>
@@ -286,7 +288,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/doctor_3.png" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/ronaldo.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
                                 <li><a href="#"> <i class="ti-facebook"></i> </a></li>
@@ -314,7 +316,7 @@
         <div class="row justify-content-center">
             <div class="col-xl-8">
                 <div class="section_tittle text-center">
-                    <h2>Our Blog</h2>
+                    <h2>Đợt hiến máu</h2>
                 </div>
             </div>
         </div>
