--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                                     <a class="nav-link" href="index.html">Trang chủ</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="hienMau.html">Lịch hiến máu</a>
+                                    <a class="nav-link" href="hienMau.html">Đợt hiến máu</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="donViLienKet.html">Đơn vị liên kết</a>
@@ -98,7 +98,7 @@
                     <div class="col-xl-2 col-sm-6 col-md-4 single-footer-widget">
                         <h4>Liên hệ</h4>
                         <ul>
-                            <li class="ti-tablet"><a href="#">  0375163016</a></li>
+                            <li class="ti-tablet"><a href="/Admin/Login/Index">  0375163016</a></li>
                             <li class="ti-email"><a href="#">  knvolap@gmail.com</a></li>
                             <li class="ti-home"><a href="#"> 48 Cao Thắng - Hải Châu Đà Nẵng</a></li>
                         </ul>
@@ -117,7 +117,7 @@
                         <ul>
                             <li><a href="#">Tìm nguồn máu</a></li>
                             <li><a href="#">Khám sức khỏe tổng quát</a></li>
-                            <li><a href="#">Dịch vụ khác</a></li>
+                            <li><a href="/Admin/Login/Index">Dịch vụ khác</a></li>
                         </ul>
                     </div>
                     <div class="col-xl-3 col-sm-6 col-md-6 single-footer-widget">
@@ -130,7 +130,7 @@
                                        onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '"
                                        required="" type="email">
                                 <button class="click-btn btn btn-default text-uppercase">
-                                    <i class="ti-angle-right"></i>
+                                    <i class="ti-angle-right" ></i>
                                 </button>
                                 <div style="position: absolute; left: -5000px;">
                                     <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
