--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Home/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Client/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
                 <div class="single_feature">
                     <div class="single_feature_part">
                         <span class="single_feature_icon"><img src="~/Assets/client/img/icon/suckhoe.svg" alt=""></span>
-                        <h4>Giảm nguy cơ ung thư</h4>
+                        <h4>Giảm tỷ lệ ung thư</h4>
                         <p>
                             Hiến máu cũng có thể giúp giảm nguy cơ mắc các bệnh ung thư.
                             Bằng cách hiến máu, hàm lượng sắt tích tụ trong cơ thể sẽ được duy trì ở mức lành mạnh có lợi cho sức khỏe.
@@ -228,7 +228,7 @@
                         <img src="~/Assets/client/img/doctor/lap.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
-                                <li><a href="#"> <i class="ti-facebook"></i> </a></li>
+                                <li><a href="https://www.facebook.com/knvolap/"> <i class="ti-facebook"></i> </a></li>
                                 <li><a href="#"> <i class="ti-twitter-alt"></i> </a></li>
                                 <li><a href="#"> <i class="ti-instagram"></i> </a></li>
                                 <li><a href="#"> <i class="ti-skype"></i> </a></li>
@@ -246,10 +246,10 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/huy.jpg" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/lap2.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
-                                <li><a href="#"> <i class="ti-facebook"></i> </a></li>
+                                <li><a href="https://www.facebook.com/nguyenhuy1412oneD"> <i class="ti-facebook"></i> </a></li>
                                 <li><a href="#"> <i class="ti-twitter-alt"></i> </a></li>
                                 <li><a href="#"> <i class="ti-instagram"></i> </a></li>
                                 <li><a href="#"> <i class="ti-skype"></i> </a></li>
@@ -267,10 +267,10 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/nhan.jpg" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/nhan2.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
-                                <li><a href="#"> <i class="ti-facebook"></i> </a></li>
+                                <li><a href="https://www.facebook.com/nguyen.nhan2110"> <i class="ti-facebook"></i> </a></li>
                                 <li><a href="#"> <i class="ti-twitter-alt"></i> </a></li>
                                 <li><a href="#"> <i class="ti-instagram"></i> </a></li>
                                 <li><a href="#"> <i class="ti-skype"></i> </a></li>
@@ -288,7 +288,7 @@
             <div class="col-sm-6 col-lg-3">
                 <div class="single_blog_item">
                     <div class="single_blog_img">
-                        <img src="~/Assets/client/img/doctor/ronaldo.jpg" alt="doctor">
+                        <img src="~/Assets/client/img/doctor/ro2.jpg" alt="doctor">
                         <div class="social_icon">
                             <ul>
                                 <li><a href="#"> <i class="ti-facebook"></i> </a></li>
@@ -300,8 +300,8 @@
                     </div>
                     <div class="single_text">
                         <div class="single_blog_text">
-                            <h3>DR Justin Stuard</h3>
-                            <p>Heart specialist</p>
+                            <h3>Ronaldo</h3>
+                            <p>Tham gia 10 lần</p>
                         </div>
                     </div>
                 </div>
